--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "react-toastify": "7.0.4",
     "redux": "4.1.0",
     "redux-thunk": "2.3.0",
-    "reselect": "4.0.0"
+    "reselect": "4.0.0",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "7.14.6",
